<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".UploadImgActivity">

    <!-- Navigation -->
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <!-- Upload Image Section -->
    <TextView
        android:id="@+id/uploadImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/media_upload"
        android:textSize="18sp"
        android:textColor="#414042"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Selected Image Display -->
    <TextView
        android:id="@+id/selectedImageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/uploadImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Upload Area -->
    <LinearLayout
        android:id="@+id/uploadArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:background="@drawable/dashed_border"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/selectedImageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/uploadIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_upload_img" />

        <TextView
            android:id="@+id/uploadPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/drag_your_file_s_to_start_uploading"
            android:textSize="14sp"
            android:textColor="@color/gray2"
            android:fontFamily="@font/roboto"
            android:gravity="center" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textSize="14sp"
            android:textColor="@color/gray1"
            android:fontFamily="@font/roboto"
            android:gravity="center" />

        <Button
            android:id="@+id/browseFilesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/browse_files"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto" />
    </LinearLayout>

    <!-- Save Button -->
    <Button
        android:id="@+id/update_Phone_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/green"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
