<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            />

    </LinearLayout>


    <!-- Change Password Text -->
    <TextView
        android:id="@+id/changePhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_your_phone_number"
        android:textSize="18sp"
        android:textColor="#414042"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/oldPhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/enter_your_old_number"
        android:textSize="14sp"
        android:textColor="@color/gray1"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/changePhoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Old Password Input -->
    <LinearLayout
        android:id="@+id/oldPhoneLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/oldPhoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/old_Phone_Icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phone"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/oldPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/old_number"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:inputType="phone"
            android:gravity="center_vertical"/>

    </LinearLayout>
    <TextView
        android:id="@+id/oldPhoneValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/oldPhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <TextView
        android:id="@+id/newPhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_you_new_number"
        android:textSize="14sp"
        android:textColor="@color/gray1"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/oldPhoneValidation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- New Password Input -->
    <LinearLayout
        android:id="@+id/newPhoneLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/newPhoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <ImageView
            android:id="@+id/new_Phone_Icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phone"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/newPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/new_number"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:inputType="phone"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <!-- Update Button -->
    <Button
        android:id="@+id/update_Phone_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:backgroundTint="@color/green"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
