<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            />

    </LinearLayout>


    <!-- Change Password Text -->
    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Change your password"
        android:textSize="18sp"
        android:textColor="#414042"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/oldPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Enter your old password"
        android:textSize="14sp"
        android:textColor="@color/gray1"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/changePasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Old Password Input -->
    <LinearLayout
        android:id="@+id/oldPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/old_Password_Icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lock"
        android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Old Password"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/old_password_Visibility_Toggle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_visibility"
            android:layout_gravity="center_vertical"
            app:tint="@color/gray1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/oldPasswordValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_your_new_password"
        android:textSize="14sp"
        android:textColor="@color/gray1"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordValidation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- New Password Input -->
    <LinearLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/newPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <ImageView
            android:id="@+id/new_Password_Icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lock"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/new_password"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/new_password_Visibility_Toggle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_visibility"
            android:layout_gravity="center_vertical"
            app:tint="@color/gray1"/>
    </LinearLayout>

    <!-- Update Button -->
    <Button
        android:id="@+id/update_Password_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:backgroundTint="@color/green"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
